// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown tests render should render closed dropdown correctly 1`] = `
<div
  className="dropdown-wrapper"
>
  <Button
    content={
      <span>
        Dropdown time
        <i
          className="material-icons dropdown-caret"
        >
          arrow_drop_down
        </i>
      </span>
    }
    kind="primary"
    onClick={[Function]}
    size="medium"
    type="button"
  />
</div>
`;

exports[`Dropdown tests render should render open arrow dropdown correctly 1`] = `
<div
  className="dropdown-wrapper"
>
  <Button
    content={
      <span>
        Dropdown time
        <i
          className="material-icons dropdown-caret"
        >
          arrow_drop_up
        </i>
      </span>
    }
    kind="primary"
    onClick={[Function]}
    size="medium"
    type="button"
  />
  <div
    className="dropdown-content dropdown-align-left arrow-dropdown"
  >
    <div
      className="arrow arrow-behind"
    />
    <div
      className="arrow"
    />
    <button
      className="dropdown-content-row medium"
      key="dropdown-row-7"
      onClick={[Function]}
    >
      party
    </button>
    <hr
      key="divider-8"
    />
    <button
      className="dropdown-content-row medium"
      key="dropdown-row-9"
      onClick={[Function]}
    >
      woohoo
    </button>
  </div>
</div>
`;

exports[`Dropdown tests render should render open dropdown correctly 1`] = `
<div
  className="dropdown-wrapper"
>
  <Button
    content={
      <span>
        Dropdown time
        <i
          className="material-icons dropdown-caret"
        >
          arrow_drop_up
        </i>
      </span>
    }
    kind="primary"
    onClick={[Function]}
    size="medium"
    type="button"
  />
  <div
    className="dropdown-content dropdown-align-left"
  >
    <button
      className="dropdown-content-row medium"
      key="dropdown-row-4"
      onClick={[Function]}
    >
      party
    </button>
    <hr
      key="divider-5"
    />
    <button
      className="dropdown-content-row medium"
      key="dropdown-row-6"
      onClick={[Function]}
    >
      woohoo
    </button>
  </div>
</div>
`;
